# Crawler

./: .travis.yml  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: build.yaml
demo/: main.cpp
include/: crawler.hpp  example.hpp  root_certificates.hpp  threadSafeQueue.hpp
main/: main.cpp
sources/: crawler.cpp  example.cpp
tests/: example.cpp  tests.cpp
